--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: max-content;
   pointer-events: none;
   margin-top: 100px;
 }
@@ -23,6 +23,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  .App-header {
+    font-size: 10px;
+  }
 }
 
 .App-link {
@@ -66,11 +72,11 @@
   }
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
