--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@ body {
   margin: 0;
   font-family: "IBM Plex Mono", monospace;
 }
+
+ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
