--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -7,10 +7,9 @@
   width: 300px;
   height: 300px;
   padding: 20px 20px;
-
+  margin: 15px;
   border: rgb(255, 255, 255) 2px solid;
   margin-bottom: 20px;
-  margin-right: 20px;
 }
 .projectTitle {
   text-decoration: underline;
