--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,20 +1,36 @@
 #projects {
   display: flex;
   flex-wrap: wrap;
+
   justify-content: center;
 }
 .projectTile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 300px;
   height: 300px;
-  padding: 20px 20px;
+  padding: 20px;
   margin: 15px;
   border: rgb(255, 255, 255) 2px solid;
-  margin-bottom: 20px;
+}
+a {
+  font-size: 36px;
+  color: white;
 }
 .projectTitle {
   text-decoration: underline;
 }
+
 .github {
   color: white;
   font-size: 36px;
+}
+
+.projectDescription {
+  flex: 1;
+}
+
+.projectLangs {
+  flex: 1;
 }
