--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,67 @@
     opacity: 0;
   }
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .App {
+    text-align: left;
+  }
+
+  .home {
+    animation-duration: 1s;
+  }
+
+  .loading {
+    animation-delay: 3s;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .App {
+    text-align: left;
+  }
+
+  .home {
+    animation-duration: 1s;
+  }
+
+  .loading {
+    animation-delay: 3s;
+  }
+}
+@media (max-width: 768px) {
+  .icons {
+    font-size: 20px;
+    margin-right: 10px;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  text-align: center;
+}
