--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,3 +6,11 @@
   color: black;
   text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    position: fixed;
+    padding: 10px;
+    font-size: 14px;
+  }
+}
