--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,3 +1,24 @@
 .intro {
-  padding: 0px 20px;
+  height: 100vh; /* This makes the div cover the full height of the viewport */
+  width: 100vw; /* This makes the div cover the full width of the viewport */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* This centers the content vertically */
+  align-items: center; /* This centers the content horizontally */
+  color: white; /* Assuming you want the text in white */
+  background-color: black; /* Keeps the background black */
+  margin: 0; /* Removes any default margin */
+  padding: 0; /* Removes any default padding */
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    padding: 0px 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .intro {
+    padding: 0px 5px;
+  }
 }
