--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -56,3 +56,11 @@
     border-right-color: white;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .line-1 {
+    width: 100%;
+    font-size: 120%;
+    margin-top: 50px;
+  }
+}
