added changes to intro section

--- a/src/App.css
+++ b/src/App.css
@@ -4,88 +4,43 @@
   color: white;
 }
 
-.home {
-  animation-name: fadeIn;
-  animation-duration: 2s;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%; /* Full height of the viewport */
+  overflow-x: hidden; /* Prevents horizontal scroll */
 }
 
+/* Animation for fading in and out */
 @keyframes fadeIn {
-  0% {
+  from {
     opacity: 0;
   }
-  100% {
+  to {
     opacity: 1;
   }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.home {
+  animation: fadeIn 2s;
 }
 
 .loading {
-  animation-name: fadeOut;
-  animation-duration: 2s;
+  animation: fadeOut 2s;
   animation-delay: 5.5s;
 }
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-align: center;
-}
-
-@media (max-width: 600px) {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    text-align: left;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .App {
-    text-align: left;
-  }
-
-  .home {
-    animation-duration: 1s;
-  }
-
-  .loading {
-    animation-delay: 3s;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .App {
-    text-align: left;
-  }
-
-  .home {
-    animation-duration: 1s;
-  }
-
-  .loading {
-    animation-delay: 3s;
-  }
-}
-@media (max-width: 768px) {
-  .icons {
-    font-size: 20px;
-    margin-right: 10px;
-  }
-}
-
+/* Styling for headings */
 h1,
 h2,
 h3,
@@ -94,4 +49,31 @@ h5,
 h6,
 p {
   text-align: center;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  .App,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    text-align: left;
+  }
+
+  .home {
+    animation-duration: 1s;
+  }
+
+  .loading {
+    animation-delay: 3s;
+  }
+
+  .icons {
+    font-size: 20px;
+    margin-right: 10px;
+  }
 }
