--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,3 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  font-family: "IBM Plex Mono", monospace;
-}
-
-ul {
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
